# folder_organizer

./: README.md  pyproject.toml
src/folder_organizer/: __init__.py  main.py  organizer.py
